<resources>
    <string name="app_name">Познай България</string>

    <string name="new_game">Нова игра</string>
    <string name="continue_game">Продължи</string>
    <string name="help_rules">Помощ и правила</string>
    <string name="settings">Настройки</string>


    <string name="title_activity_new_game">Нова игра</string>
    <string name="pleaseEnterNumber">Избрете брой на отбори:</string>


    <string name="title_activity_continue_game">ContinueGameActivity</string>

    <string name="title_activity_help_and_rules">HelpAndRulesActivity</string>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="start_game">Започнете игра</string>
    <string name="dummy_content">asd</string>
    <string name="dummy_button">asd</string>

    <string name="title_activity_guess">GuessActivity</string>
</resources>
